5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1596_1446.log
== TEST (2019-03-26 18:37:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = input()
qtd_michael = 1/3 * qtd_litrosa = round(qtd_de michael.   3)
-- ERROR:
File "XXXX", line 6
    qtd_michael = 1/3 * qtd_litrosa = round(qtd_de michael.   3)
                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = input()
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael.   3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de michael.   3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael.   3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de michael.   3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael.   3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de michael.   3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:41:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael,   3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de michael,   3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:41:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael,   3)
print(a)
-- EXECUTION TIME:
0.164833
-- ERROR:
  File "/home/codebench/codes/1596/1446/main.py", line 7
    a = round(qtd_de michael,   3)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:41:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael,   3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de michael,   3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:41:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael,   3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de michael,   3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:41:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael,   3)
print(a)
-- EXECUTION TIME:
0.145575
-- ERROR:
  File "/home/codebench/codes/1596/1446/main.py", line 7
    a = round(qtd_de michael,   3)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:41:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael,   3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de michael,   3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael,  3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de michael,  3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_de michael,  3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de michael,  3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_michael,  3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_michael,  3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:43:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_michael = 1/3 * qtd_litros
a = round(qtd_michael,  3)
print(a)
-- EXECUTION TIME:
0.151619
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
